# ATS-resume-screening

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: main.py
apps/api/app/api/v1/: routes.py
apps/api/app/core/: config.py  database.py  security.py
apps/api/app/models/: domain.py
apps/api/app/schemas/: api.py
apps/api/app/services/: screening.py
apps/api/app/workers/: tasks.py
apps/streamlit-app/: app.py
apps/web/: Dockerfile  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/candidates/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/jobs/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/screenings/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/signup/: page.tsx
apps/web/components/: nav.tsx
apps/web/lib/: api.ts
apps/web/stores/: session.ts
datasets/sample_jobs/: senior_ml_engineer.md
datasets/sample_resumes/: alex_morgan_resume.txt  priya_shah_resume.txt
docs/: api-examples.md  architecture.md  screenshots.md
infra/nginx/: nginx.conf
infra/scripts/: seed.py
tests/: test_api.py  test_parser_scoring.py
