[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

[project]
name = "ats-resume-screening"
version = "0.1.0"
description = "AI-powered ATS resume screening monorepo"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.36", "pandas>=2.2", "numpy>=1.26", "scikit-learn>=1.5", "pdfplumber>=0.11", "python-docx>=1.1", "pytesseract>=0.3", "pydantic>=2.7", "pydantic-settings>=2.3", "sentence-transformers>=3.0", "spacy>=3.7", "openai>=1.30"
]
[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "sqlalchemy[asyncio]>=2.0", "aiosqlite>=0.20", "asyncpg>=0.29", "alembic>=1.13", "python-multipart>=0.0.9", "passlib[bcrypt]>=1.7", "pyjwt>=2.8", "slowapi>=0.1", "email-validator>=2.1"]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "ruff>=0.5", "black>=24.4", "mypy>=1.10"]
[tool.pytest.ini_options]
pythonpath = ["packages/shared-types", "packages/resume-parser", "packages/ai-engine", "packages/scoring-engine", "apps/api"]
testpaths = ["tests"]
[tool.ruff]
line-length = 120
target-version = "py312"
[tool.black]
line-length = 120
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = "apps/api/alembic"
